--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,13 +3,13 @@
 #-------------------------
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=victory3
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring-data-test
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 
 #-------------------------
 # ORM settings
 #-------------------------
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
