--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/spring-data
 #-------------------------
 # ORM settings
 #-------------------------
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
