--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,5 @@ test {
 flyway {
 	url = 'jdbc:postgresql://localhost:5432/spring-data'
 	user = 'postgres'
-	password = 'admin'
+	password = 'victory3'
 }
